src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Reopened_Limit__c</fullName>
        <formula>Closed_date__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account can be re-opened until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BBC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>BBC ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_date__c</fullName>
        <description>Store ID account close date</description>
        <label>Closed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Entitlements__c</fullName>
        <description>Counts number of entitlements on an account</description>
        <label>Number of Entitlements</label>
        <summaryForeignKey>Entitlement.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Twitter_handle__c</fullName>
        <label>Twitter handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_without_Entitlements</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BBC_ID__c</columns>
        <columns>Number_of_Entitlements__c</columns>
        <columns>Locked__c</columns>
        <columns>Frozen__c</columns>
        <columns>Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Entitlements__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Accounts without Entitlements</label>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Global</role>
            <role>Integration_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BBC_ID__c</columns>
        <columns>Locked__c</columns>
        <columns>Frozen__c</columns>
        <columns>Closed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Contact_Centre_Management</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BBC_ID__c</columns>
        <columns>Closed__c</columns>
        <columns>Locked__c</columns>
        <columns>Frozen__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <role>BBC_Management</role>
            <role>Contact_Centre_Management</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_name_read_only</fullName>
        <active>true</active>
        <description>Account name is read only for all users but API user and system administrator</description>
        <errorConditionFormula>AND ( 
     NOT ( OR (
               $Profile.Name = &quot;API User&quot;,
               $Profile.Name = &quot;System Administrator&quot;
               )
           ),
     OR (ISCHANGED( FirstName ),
         ISCHANGED( LastName )
         )
     )</errorConditionFormula>
        <errorMessage>You do not have the permission to change the customer&apos;s name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Twitter_Handle_format</fullName>
        <active>true</active>
        <description>trigger if the handle does not start with @</description>
        <errorConditionFormula>NOT
   (
    BEGINS 
          ( Twitter_handle__c , &quot;@&quot; )
    )</errorConditionFormula>
        <errorDisplayField>Twitter_handle__c</errorDisplayField>
        <errorMessage>Twitter Handle should start with an &quot;@&quot;</errorMessage>
    </validationRules>
</CustomObject>